# Kuro_ACM

./: .gitignore
Algebra Lineal Lib/: CMakeLists.txt
Algebra Lineal Lib/Libs/: CMakeLists.txt
Algebra Lineal Lib/Libs/include/: alexception.h  matrizal.h
Algebra Lineal Lib/Libs/src/: matrizal.cpp
Algebra Lineal Lib/Progs/: CMakeLists.txt
Algebra Lineal Lib/Progs/src/: main.cpp
Algebra Lineal Lib/build_Darwin/: AlgLin_Test  libAlgLinLib.dylib
Core_kuro/: CMakeLists.txt
Core_kuro/camara/src/: main.cpp
Core_kuro/cinematica/: CMakeLists.txt
Core_kuro/cinematica/include/: kin_ack.h
Core_kuro/control_rueda/: CMakeLists.txt
Core_kuro/control_rueda/include/: wheel.h
Core_kuro/control_rueda/src/: main.cpp  wheel.cpp
Core_kuro/imu/: CMakeLists.txt
Core_kuro/imu/include/: imuhelper.h
Core_kuro/imu/src/: imuhelper.cpp  main.cpp
Core_kuro/joystick/src/: joystick_helper.cpp
Core_kuro/laser/: CMakeLists.txt
Core_kuro/master/: CMakeLists.txt
Core_kuro/master/src/: main.cpp
Core_kuro/neko/include/: kuro_thread.h  kurosocket.h  muramasa.h
Core_kuro/neko/src/: kuro_thread.cpp  kurosocket.cpp
Core_kuro/pruebas/: CMakeLists.txt
Core_kuro/pruebas/src/: main.cpp
Imagenes/: carpetas.dia
Test_kuro/kin_test/: CMakeLists.txt
Test_kuro/kin_test/src/: main.cpp
Test_kuro/tengu_AX12/: CMakeLists.txt
Test_kuro/tengu_AX12/src/: ax_12_motor.cpp  main.cpp
kuro_Core/: CMakeLists.txt  CMakeLists.txt.user.15c50fe  CMakeLists.txt.user.18  CMakeLists.txt.user.6d473a8  CMakeLists.txt.user.a23bcbc
kuro_Core/WebUI/test_camara/src/: main.cpp
kuro_Core/build_Linux/: test_joy_motor  test_joystick  test_motor  test_motor_pro
kuro_Core/cinematica/: CMakeLists.txt
kuro_Core/cinematica/acker/: CMakeLists.txt  CMakeLists.txt~
kuro_Core/cinematica/acker/include/: ackermodel.h
kuro_Core/cinematica/acker/src/: ackermodel.cpp
kuro_Core/cinematica/cinematica_organizar/: CMakeLists.txt
kuro_Core/cinematica/cinematica_organizar/include/: kin_ack.h  kin_omni.h
kuro_Core/cinematica/cinematica_organizar/src/: kin_ack.cpp  kin_omni.cpp  main.cpp
kuro_Core/cinematica/difer/include/: difermodel.h
kuro_Core/cinematica/difer/src/: difermodel.cpp
kuro_Core/cinematica/modeloInterface/: CMakeLists.txt
kuro_Core/cinematica/modeloInterface/include/: modelointerface.h
kuro_Core/cinematica/omni/: CMakeLists.txt
kuro_Core/cinematica/omni/include/: omnimodel.h
kuro_Core/cinematica/omni/src/: omnimodel.cpp
kuro_Core/comunicacion/: CMakeLists.txt
kuro_Core/comunicacion/IPC/shared_mem_1/: CMakeLists.txt
kuro_Core/comunicacion/IPC/shared_mem_2/: CMakeLists.txt
kuro_Core/comunicacion/ethernet_aux/: CMakeLists.txt
kuro_Core/comunicacion/ethernet_aux/include/: myethernet.h
kuro_Core/comunicacion/ethernet_aux/src/: myethernet.cpp
kuro_Core/librerias/: CMakeLists.txt  mysemaphore.cpp  mysemaphore.h
kuro_Core/librerias/dynamixel_aux/: CMakeLists.txt
kuro_Core/librerias/dynamixel_pro_aux/: CMakeLists.txt
kuro_Core/librerias/dynamixel_pro_aux/include/: serialport.h
kuro_Core/librerias/dynamixel_pro_aux/tengu/: CMakeLists.txt
kuro_Core/librerias/logs_mensajes partir/: CMakeLists.txt  main.cpp
kuro_Core/librerias/logs_mensajes partir/include/: logneko.h  message.h  muramasa.h  serialHelper.h
kuro_Core/librerias/logs_mensajes partir/src/: logneko.cpp  message.cpp  serialHelper.cpp
kuro_Core/librerias/mensajes/: main.cpp
kuro_Core/librerias/mensajes/include/: message.h  serialHelper.h
kuro_Core/librerias/mensajes_aux/: CMakeLists.txt~
kuro_Core/librerias/mensajes_aux/include/: mimensaje.h
kuro_Core/librerias/mensajes_aux/src/: message.cpp  mimensaje.cpp
kuro_Core/librerias/semaphore_aux/: CMakeLists.txt  CMakeLists.txt~
kuro_Core/librerias/socket_aux/: CMakeLists.txt
kuro_Core/librerias/socket_aux/include/: mysocket.h
kuro_Core/librerias/socket_aux/src/: mysocket.cpp
kuro_Core/librerias/thread_aux/: CMakeLists.txt
kuro_Core/master/: CMakeLists.txt  CMakeLists.txt.autosave
kuro_Core/master/include/: master.h
kuro_Core/master/src/: main.cpp  master.cpp
kuro_Core/motores/: CMakeLists.txt
kuro_Core/motores/AX_12/: CMakeLists.txt
kuro_Core/motores/AX_12/include/: ax_12_motor.h
kuro_Core/motores/AX_12/src/: ax_12_motor.cpp
kuro_Core/motores/M54_PRO/: CMakeLists.txt
kuro_Core/motores/M54_PRO/include/: m54_pro_motor.h
kuro_Core/motores/M54_PRO/src/: m54_pro_motor.cpp
kuro_Core/motores/Magic_PIE/: CMakeLists.txt
kuro_Core/motores/Magic_PIE/include/: magic_pie_motor.h
kuro_Core/motores/Magic_PIE/src/: magic_pie_motor.cpp
kuro_Core/motores/motorinterface/: CMakeLists.txt
kuro_Core/motores/motorinterface/include/: motorinterface.h
kuro_Core/perifericos/: CMakeLists.txt  CMakeLists.txt~
kuro_Core/perifericos/joystick/: CMakeLists.txt
kuro_Core/perifericos/joystick/include/: joystick_helper.h
kuro_Core/perifericos/joystick/src/: joystick_helper.cpp  main.cpp
kuro_Core/sensores/: CMakeLists.txt
kuro_Core/sensores/camara/: CMakeLists.txt  main2.cpp
kuro_Core/sensores/camara/include/: camaracontroller.h
kuro_Core/sensores/camara/src/: camaracontroller.cpp  main.cpp
kuro_Core/sensores/laser/: CMakeLists.txt
kuro_Core/sensores/laser/Sick_test/: Sick_test.pro  Sick_test.pro.user.06b869d  Sick_test.pro.user.0c355a8  Sick_test.pro.user.15c50fe  Sick_test.pro.user.16  Sick_test.pro.user.18  Sick_test.pro.user.3.2-pre1  Sick_test.pro.user.83e8787  Sick_test.pro.user.a23bcbc  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sick_test.cpp  sick_test.h
kuro_Core/sensores/laser/include/: lasercontroller.h
kuro_Core/sensores/laser/src/: lasercontroller.cpp  lasercontroller.cpp.autosave
kuro_Core/test/: CMakeLists.txt
kuro_Core/test/test_camara/: CMakeLists.txt
kuro_Core/test/test_camara/src/: main.cpp
kuro_Core/test/test_joy_motor/: CMakeLists.txt
kuro_Core/test/test_joy_motor/src/: main.cpp
kuro_Core/test/test_joystick/: CMakeLists.txt
kuro_Core/test/test_motor/: CMakeLists.txt
kuro_Core/test/test_motor_pro/: CMakeLists.txt
kuro_Core/test/test_socket/: CMakeLists.txt
(+397 files in other folders)
