cmake_minimum_required(VERSION 2.6)
project(kuroproject)

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build_${CMAKE_SYSTEM_NAME})
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)

set(NEKO_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/neko/include)

include_directories("${PROJECT_INCLUDE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}")
add_subdirectory(master)
add_subdirectory(neko)
#add_subdirectory(planer)
#add_subdirectory(control_carro)
add_subdirectory(control_rueda)
add_subdirectory(cinematica)
#add_subdirectory(sensores)
#add_subdirectory(status)
#add_subdirectory(comunicacion)
#add_subdirectory(camara)
#add_subdirectory(odometria)
#add_subdirectory(laser)
add_subdirectory(imu)
#add_subdirectory(gps)
add_subdirectory(pruebas)
